Fix pre wrapping

--- a/src/sentry/static/sentry/less/shared-components.less
+++ b/src/sentry/static/sentry/less/shared-components.less
@@ -434,9 +434,8 @@ table.table.key-value {
     vertical-align: top;
 
     pre {
-      margin-bottom: 0;
-      word-break: break-all;
-      word-wrap: break-word;
+      box-sizing: border-box;
+      white-space: pre-wrap;
       margin-top: 2px;
       margin-bottom: 2px;
     }
